--- a/index.html
+++ b/index.html
@@ -5,48 +5,172 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <title>China</title>
 </head>
 
 <body>
-    <div class="collection">
-        <div id="ticketleft">
-            <div class="mydiv">
-                <img src="images/passport_scan 1.png" width="300px" alt="ticket piece">
+    <div id="container">
+        <h1 id="zoom-text">I collect to remember</h1>
+    </div>
+    <div class="rows">
+        <div class="grid">
+            <!-- tickets -->
+            <div class="collection">
+                <div id="ticketleft">
+                    <div class="mydiv">
+                        <img id="img1" src="images/passport_scan 1.png" width="300px" alt="ticket piece">
+                    </div>
+                </div>
+                <div id="ticketcenter">
+                    <div class="mydiv">
+                        <img src="images/passport_scan 3.png" width="300px" alt="ticket piece">
+                    </div>
+                </div>
+                <div id="ticketright">
+                    <div class="mydiv">
+                        <img src="images/zine_scan 1.png" width="300px" alt="ticket piece">
+                    </div>
+                </div>
+                <div id="myDiv2" class="block">meow</div>
+                <div id="myDiv" class="block">Content of the Div</div>
+                <div id="myDiv3" class="block">blahblah</div>
+            </div>
+            <div class="descright">
+                <div class="description">
+                    <button type="button" class="collapsible">Seattle to Beijing</button>
+                    <div class="content">
+                        <p>Lorem ipsum...</p>
+                    </div>
+                </div>
             </div>
         </div>
-        <div id="ticketcenter">
-            <div class="mydiv">
-                <img src="images/passport_scan 3.png" width="300px" alt="ticket piece">
+        <div class="grid">
+            <!-- hotel -->
+            <div class="description">
+                <button type="button" class="collapsible">Seattle to Beijing</button>
+                <div class="content">
+                    <p>Lorem ipsum...</p>
+                </div>
+            </div>
+            <div class="collection">
+                <div id="hotelright">
+                    <div class="mydiv">
+                        <img id="img1" src="images/passport_scan 1.png" width="300px" alt="ticket piece">
+                    </div>
+                </div>
+                <div id="hotelcenter">
+                    <div class="mydiv">
+                        <img src="images/passport_scan 3.png" width="300px" alt="ticket piece">
+                    </div>
+                </div>
+                <div id="hotelleft">
+                    <div class="mydiv">
+                        <img src="images/zine_scan 1.png" width="300px" alt="ticket piece">
+                    </div>
+                </div>
+                <div id="myDiv" class="hidden">Content of the Div</div>
             </div>
         </div>
-        <div id="ticketright">
-            <div class="mydiv">
-                <img src="images/zine_scan 1.png" width="300px" alt="ticket piece">
+        <div class="grid">
+            <!-- pharmacy -->
+            <div class="collection">
+                <div id="pharmacyleft">
+                    <div class="mydiv">
+                        <img id="img1" src="images/passport_scan 1.png" width="300px" alt="ticket piece">
+                    </div>
+                </div>
+                <div id="pharmacycenter">
+                    <div class="mydiv">
+                        <img src="images/passport_scan 3.png" width="300px" alt="ticket piece">
+                    </div>
+                </div>
+                <div id="pharmacyright">
+                    <div class="mydiv">
+                        <img src="images/zine_scan 1.png" width="300px" alt="ticket piece">
+                    </div>
+                </div>
+                <div id="myDiv" class="hidden">Content of the Div</div>
+            </div>
+            <div class="descright">
+                <div class="description">
+                    <button type="button" class="collapsible">Seattle to Beijing</button>
+                    <div class="content">
+                        <p>Lorem ipsum...</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="grid">
+             <!-- fruits -->
+            <div class="description">
+                <button type="button" class="collapsible">Seattle to Beijing</button>
+                <div class="content">
+                    <p>Lorem ipsum...</p>
+                </div>
+            </div>
+            <div class="collection">
+                <div id="fruitsright">
+                    <div class="mydiv">
+                        <img id="img1" src="images/passport_scan 1.png" width="300px" alt="ticket piece">
+                    </div>
+                </div>
+                <div id="fruitscenter">
+                    <div class="mydiv">
+                        <img src="images/passport_scan 3.png" width="300px" alt="ticket piece">
+                    </div>
+                </div>
+                <div id="fruitsleft">
+                    <div class="mydiv">
+                        <img src="images/zine_scan 1.png" width="300px" alt="ticket piece">
+                    </div>
+                </div>
+                <div id="myDiv" class="hidden">Content of the Div</div>
+            </div>
+        </div>
+        <div class="grid">
+             <!-- postcard -->
+            <div class="collection">
+                <div id="postcardleft">
+                    <div class="mydiv">
+                        <img id="img1" src="images/passport_scan 1.png" width="300px" alt="ticket piece">
+                    </div>
+                </div>
+                <div id="postcardright">
+                    <div class="mydiv">
+                        <img src="images/zine_scan 1.png" width="300px" alt="ticket piece">
+                    </div>
+                </div>
+            </div>
+            <div class="descright">
+                <div class="description">
+                    <button type="button" class="collapsible">Seattle to Beijing</button>
+                    <div class="content">
+                        <p>Lorem ipsum...</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- family photos -->
+        <div class="collection">
+            <div id="photo1">
+                <div class="mydiv">
+                    <img id="img1" src="images/passport_scan 1.png" width="300px" alt="ticket piece">
+                </div>
+            </div>
+            <div id="photo2">
+                <div class="mydiv">
+                    <img src="images/passport_scan 3.png" width="300px" alt="ticket piece">
+                </div>
+            </div>
+            <div id="photo3">
+                <div class="mydiv">
+                    <img src="images/zine_scan 1.png" width="300px" alt="ticket piece">
+                </div>
             </div>
         </div>
     </div>
-
-    <div class="collection">
-        <div id="hotelleft">
-            <div class="mydiv">
-                <img src="images/zine_scan 20.png" width="450px" alt="ticket piece">
-            </div>
-        </div>
-        <div id="hotelcenter">
-            <div class="mydiv">
-                <img src="images/zine_scan 19.png" width="330px" alt="ticket piece">
-            </div>
-        </div>
-        <div id="hotelright">
-            <div class="mydiv">
-                <img src="images/zine_scan 18.png" width="300px" alt="ticket piece">
-            </div>
-        </div>
-    </div>
-
     <script src="script.js"></script>
-
 </body>
 
 </html>
