--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://use.typekit.net/kta2bqq.css">
     <title>China</title>
 </head>
 
 <body>
+    <p id="disclaimer"> ( please view fullscreen for best results )</p>
     <div id="container">
-        <h1 id="zoom-text">I collect to remember</h1>
+        <h1 id="zoom-text">i collect to remember you</h1>
     </div>
     <div class="rows">
         <div class="grid">
@@ -32,15 +33,26 @@
                         <img src="images/zine_scan 1.png" width="300px" alt="ticket piece">
                     </div>
                 </div>
-                <div id="myDiv2" class="block">meow</div>
-                <div id="myDiv" class="block">Content of the Div</div>
-                <div id="myDiv3" class="block">blahblah</div>
+                <img id="img01" src="images/IMG_8573.JPG">
+                <div id="myDiv2" class="hidden">back of a plane ticket from PEK to SEATAC, carry-on tag included.</div>
+                <div id="myDiv" class="hidden">plane ticket from PEK to SEATAC</div>
+                <div id="myDiv3" class="hidden">plane ticket from SEATAC to PEK</div>
+
             </div>
             <div class="descright">
                 <div class="description">
-                    <button type="button" class="collapsible">Seattle to Beijing</button>
+                    <button type="button" class="collapsible">飞机场 Airport ( 12.22.24 )</button>
                     <div class="content">
-                        <p>Lorem ipsum...</p>
+                        <p>this past winter, a professor i was working under offered to set me up on a free trip to
+                            china through a university in hebei province. china was a place i dreamt about, but
+                            experienced only through stories and diasporic facsimile. i always imagined my first trip
+                            there to be with my family, visiting our ancestoral villages in Guangzhou. it wasn't until i
+                            was at the airport that i realized the last time i had been in a plane was when i was
+                            fifteen, flying to my <span id="hover01">great-grandmother's</span> funeral in LA. <br>
+                            growing up, she lived with us for half the year. our communication was limited (i was a a
+                            child; she spoke few words of english and i spoke few in cantonese). she immigrated during
+                            ww2. when she died i felt something sever, the final living thread connecting me to this
+                            other world snapped. a million questions left unanswered.</p>
                     </div>
                 </div>
             </div>
@@ -48,28 +60,43 @@
         <div class="grid">
             <!-- hotel -->
             <div class="description">
-                <button type="button" class="collapsible">Seattle to Beijing</button>
+                <button type="button" class="collapsible">石家庄市 Shijiazhuang ( 12.23.24 )</button>
                 <div class="content">
-                    <p>Lorem ipsum...</p>
+                    <p>after spending the night in beijing, i awoke in a hotel and met the rest of my travel group. a
+                        collection of professors from the university, two other college students, and a handful of
+                        highschoolers with their chinese teacher. we boarded the bus and made the 4 hour journey to
+                        shijiazhuang, the capital of hebei province, where the university is located. <br> the scale and
+                        depth of history in china is astounding. shijiazhuang is a city of 11 million people (3 million
+                        more than new york), but you would be hard pressed to find a non-chinese person that has heard
+                        of it. the traces of rapid industrialization and a newfound consumerist culture linger; ancient
+                        military structures and <span id="hover02">buddhist temples</span> sit minutes away from
+                        massive, glittering malls and
+                        street markets.</p>
                 </div>
             </div>
             <div class="collection">
                 <div id="hotelright">
                     <div class="mydiv">
-                        <img id="img1" src="images/passport_scan 1.png" width="300px" alt="ticket piece">
+                        <img id="img1" src="images/zine_scan 18.png" width="250px" alt="ticket piece">
                     </div>
                 </div>
                 <div id="hotelcenter">
                     <div class="mydiv">
-                        <img src="images/passport_scan 3.png" width="300px" alt="ticket piece">
+                        <img src="images/zine_scan 19.png" width="320px" alt="ticket piece">
                     </div>
                 </div>
                 <div id="hotelleft">
                     <div class="mydiv">
-                        <img src="images/zine_scan 1.png" width="300px" alt="ticket piece">
+                        <img src="images/zine_scan 20.png" width="450px" alt="ticket piece">
                     </div>
                 </div>
-                <div id="myDiv" class="hidden">Content of the Div</div>
+                <img id="img02" src="images/IMG_1602.JPG">
+                <div id="myDiv5" class="hidden">front of a room key holder for the Jin Yuan Grand Hotel in Shijiazhuang
+                </div>
+                <div id="myDiv4" class="hidden">open hotel key holder, contains a map of the streets surrounding the
+                    hotel.</div>
+                <div id="myDiv6" class="hidden">back of the hotel key holder, displays a map of the subway lines in
+                    Shijiazhuang</div>
             </div>
         </div>
         <div class="grid">
@@ -77,96 +104,143 @@
             <div class="collection">
                 <div id="pharmacyleft">
                     <div class="mydiv">
-                        <img id="img1" src="images/passport_scan 1.png" width="300px" alt="ticket piece">
+                        <img id="img1" src="images/zine_scan 23.png" width="350px" alt="ticket piece">
                     </div>
                 </div>
                 <div id="pharmacycenter">
                     <div class="mydiv">
-                        <img src="images/passport_scan 3.png" width="300px" alt="ticket piece">
+                        <img src="images/zine_scan 25.png" width="350px" alt="ticket piece">
                     </div>
                 </div>
                 <div id="pharmacyright">
                     <div class="mydiv">
-                        <img src="images/zine_scan 1.png" width="300px" alt="ticket piece">
+                        <img src="images/zine_scan 26 copy.png" width="200px" alt="ticket piece">
                     </div>
                 </div>
-                <div id="myDiv" class="hidden">Content of the Div</div>
+                <img id="img03" src="images/IMG_6194.jpg">
+                <div id="myDiv7" class="hidden">front of a tangerine bag</div>
+                <div id="myDiv8" class="hidden">sticker for wuqiao acrobatics</div>
+                <div id="myDiv9" class="hidden">back of a tangerine bag</div>
             </div>
             <div class="descright">
                 <div class="description">
-                    <button type="button" class="collapsible">Seattle to Beijing</button>
+                    <button type="button" class="collapsible">吴桥县 Wuqiao ( 12.27.24 )</button>
                     <div class="content">
-                        <p>Lorem ipsum...</p>
+                        <p>wuqiao, a rural county with a population of 200,000 people, is the home of chinese
+                            acrobatics. we arrived there at night, stopping to eat dinner at a small korean restaurant.
+                            during our meal, a boy arrived, accompanied by a young man dressed in a black uniform. the
+                            boy gave each of us an orange. we were told he was the son of the director of the acrobatics
+                            school in wuqiao, which we would be visiting the next morning. <br> <span id="hover03">the
+                                school</span> was bustling with activity as children as young as five years old
+                            practiced circus arts around us. instead of studying for their college entrance exams
+                            (gaokao) these children studied to become acrobats and performers. the thought of children
+                            foregoing traditional education to join the circus was surreal, seeming very at-odds with
+                            the cut-throat careerism china is associated with.</p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="grid">
-             <!-- fruits -->
+            <!-- fruits -->
             <div class="description">
-                <button type="button" class="collapsible">Seattle to Beijing</button>
+                <button type="button" class="collapsible">北京市 Beijing ( 12.28.24 )</button>
                 <div class="content">
-                    <p>Lorem ipsum...</p>
+                    <p>beijing was overwhelming. in the span of a couple of days we visited tiananmen square, the
+                        forbidden city, the summer palace, and the great wall. i had never been in a palace before. the
+                        beauty was almost outweighed by the disgust by such <span id="hover04">extravagent displays of wealth,</span> you begin to
+                        appreciate the peasantry's desire to revolt.<br>during my time there, i did not acclimate well
+                        to the winter smog. there was something exciting about going to the pharmacy near my hotel to
+                        pick up cough drops or masks, imagining how a local resident might run these errands regularly.
+                        going alone forced me to practice the chinese i was otherwise embarrassed to attempt. </p>
                 </div>
             </div>
             <div class="collection">
                 <div id="fruitsright">
                     <div class="mydiv">
-                        <img id="img1" src="images/passport_scan 1.png" width="300px" alt="ticket piece">
+                        <img id="img1" src="images/zine_scan 11.png" width="300px" alt="ticket piece">
                     </div>
                 </div>
                 <div id="fruitscenter">
                     <div class="mydiv">
-                        <img src="images/passport_scan 3.png" width="300px" alt="ticket piece">
+                        <img src="images/zine_scan 12.png" width="380px" alt="ticket piece">
                     </div>
                 </div>
                 <div id="fruitsleft">
                     <div class="mydiv">
-                        <img src="images/zine_scan 1.png" width="300px" alt="ticket piece">
+                        <img src="images/zine_scan 8.png" width="300px" alt="ticket piece">
                     </div>
                 </div>
-                <div id="myDiv" class="hidden">Content of the Div</div>
+                <img id="img04" src="images/IMG_3479.JPG">
+                <div id="myDiv10" class="hidden">cough drop wrapper</div>
+                <div id="myDiv11" class="hidden">wang lao gu cough drop brand</div>
+                <div id="myDiv12" class="hidden">back of a wang lao gu cough drop container</div>
             </div>
         </div>
         <div class="grid">
-             <!-- postcard -->
+            <!-- postcard -->
             <div class="collection">
-                <div id="postcardleft">
-                    <div class="mydiv">
-                        <img id="img1" src="images/passport_scan 1.png" width="300px" alt="ticket piece">
-                    </div>
-                </div>
                 <div id="postcardright">
                     <div class="mydiv">
-                        <img src="images/zine_scan 1.png" width="300px" alt="ticket piece">
+                        <img id="img1" src="images/zine_scan 21.png" width="510px" alt="ticket piece">
                     </div>
                 </div>
+                <div id="postcardleft">
+                    <div class="mydiv">
+                        <img id="img1" src="images/zine_scan 22.png" width="350px" alt="ticket piece">
+                    </div>
+                </div>
+                <div id="myDiv13" class="hidden">postcard front, year of the goat</div>
+                <div id="myDiv14" class="hidden">postcard back, from china to the united states</div>
             </div>
             <div class="descright">
                 <div class="description">
-                    <button type="button" class="collapsible">Seattle to Beijing</button>
+                    <button type="button" class="collapsible">家 Home ( 01.01.25 )</button>
                     <div class="content">
-                        <p>Lorem ipsum...</p>
+                        <p>i often try to imagine life from my great-grandmothers perspective. raised in rural china, an arranged marriage at just fifteen. leaving your first-born behind in hongkong to meet your husband in los angeles. what could it have been like to witness so much staggering change in one lifetime? <br> what does home mean to a diasporic population? where do you go when the place you are from no long exists, and the place you live doesn't want you?</p>
                     </div>
                 </div>
             </div>
         </div>
         <!-- family photos -->
-        <div class="collection">
+        <div class="end">
             <div id="photo1">
                 <div class="mydiv">
-                    <img id="img1" src="images/passport_scan 1.png" width="300px" alt="ticket piece">
+                    <img id="img1" src="images/taipotaigongolder.png" width="300px" alt="ticket piece">
                 </div>
             </div>
             <div id="photo2">
                 <div class="mydiv">
-                    <img src="images/passport_scan 3.png" width="300px" alt="ticket piece">
+                    <img src="images/taigongbutcher.png" width="300px" alt="ticket piece">
                 </div>
             </div>
             <div id="photo3">
                 <div class="mydiv">
-                    <img src="images/zine_scan 1.png" width="300px" alt="ticket piece">
+                    <img src="images/IMG_3528.JPG" width="300px" alt="ticket piece">
                 </div>
+            </div>
+            <div id="photo4">
+                <div class="mydiv">
+                    <img id="img1" src="images/gonggongdad.JPG" width="300px" alt="ticket piece">
+                </div>
+            </div>
+            <div id="photo5">
+                <div class="mydiv">
+                    <img src="images/IMG_8571.JPG" width="300px" alt="ticket piece">
+                </div>
+            </div>
+            <div id="photo6">
+                <div class="mydiv">
+                    <img src="images/IMG_8565.JPG" width="300px" alt="ticket piece">
+                </div>
+            </div>
+            <div id="photo8">
+                <div class="mydiv">
+                    <img src="images/IMG_3829.png" width="300px" alt="ticket piece">
+                </div>
+            </div>
+            <div id="thanks">
+                <p>this is a narrative archive of ephmera i collected during a trip to china (dec. 2024). it is also a
+                    reflection on chinese cultural identity in the diaspora. thank you for reading!</p>
             </div>
         </div>
     </div>
